2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/pointer-list-view.c: (pointer_list_view_init):
	* src/InfoWindow.cs:
	* src/PlaylistWindow.cs:

	Various cleanups, and make the playlist multiselection.

2004-02-26  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/InfoWindow.glade:
	* data/glade/PlaylistWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	A src/CoverImage.cs:
	* src/InfoWindow.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Created a CoverImage widget which is now both used by 
	the playlist and the song information window.

	The add and info dialogs will now only be made transient
	for the playlist window when the playlist window is actually
	visible. This depends on a yet uncommited fix for Gtk# to
	work reliably.

2004-02-25  Jordi Mallach  <jordi@sindominio.net>

	* configure.in (ALL_LINGUAS): Added "ca" (Catalan).

2004-02-24  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/InfoWindow.glade:
	* src/InfoWindow.cs:

	Fix keynav.

2004-02-24  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/InfoWindow.glade:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/ErrorDialog.cs:
	* src/FileSelector.cs:
	* src/HandleView.cs:
	* src/InfoWindow.cs:
	* src/KeyUtils.cs:
	* src/Makefile.am:
	* src/Muine.cs:
	* src/NoMusicFoundWindow.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/SkipToWindow.cs:
	* src/YesNoDialog.cs:

	Updates for Gtk# CVS. 

	And stop using GtkHTML for the information window, without any CSS
	we had to use very hackish table layouts which were, well, hackish.
	So we now just use normal widgets. 

2004-02-23  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/InfoWindow.glade:
	* src/InfoWindow.cs:
	* src/Makefile.am:

	Use GtkHTML for the information window. Obviously still far from
	finished.

2004-02-22  Jorn Baayen  <jbaayen@gnome.org>

	* src/HandleView.cs:
	* src/KeyUtils.cs:

	Do not handle single modifier keypresses.
